# Groebner_basis

./: .gitignore  CMakeLists.txt  README.md  algorithms.h  main.cpp  modular.h  monomial.cpp  monomial.h  monomial_order.cpp  monomial_order.h  polynomial.h  polynomial_order.h  speed_test.h  tests.cpp  tests.h  tmp.cpp
